# Lets_Go_Protobuf

./: README.md
lets_go_proto/obsolete/: MessagesChatRoom.proto
lets_go_proto/proto_client_server_shared/: AccessStatusEnum.proto  AccountLoginTypeEnum.proto  AccountState.proto  AlgorithmSearchOptions.proto  CMakeLists.txt  CategoryTimeFrame.proto  ChatMessageStream.proto  ChatMessageToClientMessage.proto  ChatRoomCommands.proto  ChatRoomInfoMessage.proto  CreatedChatRoomInfo.proto  EmailSendingMessages.proto  ErrorMessage.proto  ErrorOriginEnum.proto  EventRequestMessage.proto  FeedbackTypeEnum.proto  FindMatches.proto  LetsGoEventStatus.proto  LoginFunction.proto  LoginSupportFunctions.proto  LoginToServerBasicInfo.proto  LoginValuesToReturnToClient.proto  MemberSharedInfoMessage.proto  PreLoginTimestamps.proto  ReportMessages.proto  RequestFields.proto  RequestMessages.proto  RetrieveServerLoad.proto  SMSVerification.proto  SendErrorToServer.proto  SetFields.proto  StatusEnum.proto  TypeOfChatMessage.proto  UpdateOtherUserMessages.proto  UserAccountType.proto  UserEventCommands.proto  UserMatchOptions.proto  UserSubscriptionStatus.proto
lets_go_proto/proto_server_specific/: AccountCategoryEnum.proto  AdminChatRoomCommands.proto  AdminEventCommands.proto  AdminLevelEnum.proto  CMakeLists.txt  DisciplinaryActionType.proto  ErrorHandledMoveReasonEnum.proto  HandleErrors.proto  HandleFeedback.proto  HandleReports.proto  ManageServerCommands.proto  MatchTypeEnum.proto  RequestAdminInfo.proto  RequestStatistics.proto  RequestUserAccountInfo.proto  SendPictureForTesting.proto  SetAdminFields.proto  UserAccountStatusEnum.proto
